--- a/waaromSpeeddate.html
+++ b/waaromSpeeddate.html
@@ -81,15 +81,15 @@
 				<div class="card">
 					<div class="card-header" id="headingOne">
 						<h2 class="clearfix mb-0">
-							<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"><i class="fa fa-chevron-circle-down"></i> leuk</a>
+							<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> leuk<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
 						<div class="card-body">
-              <p>Onze events spreken mensen aan die ervoor open staan om nieuwe mensen te leren kennen in het échte leven. Een leuke groep gecombineerd met een gezellige locatie en wat gratis drankjes zorgt er gegarandeerd voor dat het ijs direct gebroken is en je naar huis gaat met een geweldige avond achter de rug.
+              <p>Onze events spreken mensen aan die ervoor open staan om nieuwe mensen te leren kennen <strong> in het échte leven. </strong> Een leuke groep gecombineerd met een gezellige locatie en wat gratis drankjes zorgt er gegarandeerd voor dat het ijs direct gebroken is en je naar huis gaat met een geweldige avond achter de rug.
             </p>
               <p>
-                Speeddating is écht bucket-list materiaal, je moet het eens gedaan hebben in je leven! Oké het kan een beetje eng zijn, je weet natuurlijk niet op voorhand wie je gaat ontmoeten of wat je te wachten staat… Maar dit kan er alleen maar voor zorgen dat je aangenaam verrast wordt door de mensen die je ontmoet en de leuke cafés en restaurants die je ontdekt. In het worst case scenario ga je naar huis met een goed verhaal ;)!
+                Speeddating is <strong>écht bucket-list materiaal,</strong> je moet het eens gedaan hebben in je leven! Oké het kan een beetje eng zijn, je weet natuurlijk niet op voorhand wie je gaat ontmoeten of wat je te wachten staat… Maar dit kan er alleen maar voor zorgen dat je aangenaam verrast wordt door de mensen die je ontmoet en de leuke cafés en restaurants die je ontdekt. In het worst case scenario ga je naar huis met een goed verhaal ;)!
               </p>
               <p>
                 Probeer het eens en wij garanderen je dat je versteld zult staan van hoe leuk de avond was!
@@ -100,13 +100,13 @@
 				<div class="card">
 					<div class="card-header" id="headingTwo">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><i class="fa fa-chevron-circle-down"></i> Snel</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Snel<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
 						<div class="card-body">
               <p>
-                Speeddating is dé perfecte ijsbreker. Elke minidate duurt slechts 5 minuten. Onderzoek wijst immers uit dat je niet langer nodig hebt om aan te voelen of het ‘klikt’ of niet!
+                Speeddating is<strong> dé perfecte ijsbreker.</strong> Elke minidate duurt slechts 5 minuten. Onderzoek wijst immers uit dat je niet langer nodig hebt om aan te voelen of het ‘klikt’ of niet!
               </p>
               <p>
                 Eens het ijs gebroken is kan je na erna nog gezellig verder praten over een lekker glaasje wijn.
@@ -117,13 +117,13 @@
 				<div class="card">
 					<div class="card-header" id="headingThree">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><i class="fa fa-chevron-circle-down"></i> Makkelijk</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Makkelijk<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
 						<div class="card-body">
               <p>
-                Speeddaten is een makkelijke manier om nieuwe mensen te leren kennen.
+                Speeddaten is<strong> een makkelijke manier om nieuwe mensen te leren kennen.</strong>
             </p>
               <p>
                 Anders dan een avond in een café of discotheek, ben je er met speeddating zeker van dat je verschillende singels zal ontmoeten die, net zoals jij, er voor open staan om nieuwe mensen te ontmoeten.
@@ -135,13 +135,13 @@
 				<div class="card">
 					<div class="card-header" id="headingFour">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"><i class="fa fa-chevron-circle-down"></i> Veilig</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"> Veilig<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
 						<div class="card-body">
               <p>
-                Je ontmoet iedereen ‘face to face‘.
+                Je ontmoet iedereen<strong> ‘face to face‘.</strong>
               </p>
               <p>
                 Dit wil zeggen: geen mensen die niet lijken op hun online profielfoto of lange en gênante avonden.
@@ -150,7 +150,7 @@
                 Je ziet de avond zelf immers meteen hoe je gesprekspartner er écht uitziet en je zit maximum vijf minuutjes bij elke persoon. Erna kan je tijdens de after drink zelf nog gezellig napraten met wie je wilt.
               </p>
               <p>
-                Je kiest ook achteraf de personen uit met wie je jouw contactgegevens wilt delen. Dare to Date garandeert op dit vlak 100% discretie!
+                Je kiest ook achteraf de personen uit met wie je jouw contactgegevens wilt delen. Dare to Date garandeert op dit vlak<strong> 100% discretie!</strong>
               </p>
 
             </div>
@@ -159,7 +159,7 @@
         	<div class="card">
 					<div class="card-header" id="headingFive">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive"><i class="fa fa-chevron-circle-down"></i> Grappig</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive"> Grappig<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
@@ -169,7 +169,7 @@ Onze speeddates zijn “speeddates with a twist”.
 
               </p>
               <p>
-Zo ligt op elke tafel een enveloppe met daarin verschillende dillemma’s.
+Zo ligt op elke tafel <strong>een enveloppe met daarin verschillende dillemma’s.</strong>
 
               </p>
               <p>
@@ -200,24 +200,24 @@ Het antwoord zal je ongetwijfeld veel leren over de persoon in kwestie en bovend
 				<div class="card">
 					<div class="card-header" id="headingSix">
 						<h2 class="clearfix mb-0">
-							<a class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix"><i class="fa fa-chevron-circle-down"></i> De avond zelf</a>
+							<a class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix"> De avond zelf<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseSix" class="collapse show" aria-labelledby="headingSix" data-parent="#accordionExample">
 						<div class="card-body">
               <p>
-Bij aankomst verwelkomt onze sympathieke host je met een grote glimlach en geeft jou direct jetons om een lekker drankje te gaan halen aan de bar.            </p>
+Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote glimlach en geeft jou direct jetons om een lekker drankje te gaan halen aan de bar.            </p>
               <p>
                 Na een gezamenlijk apero momentje  nemen de vrouwen plaats achter een tafeltje, waarna de mannen willekeurig een tafeltje uitkiezen voor de eerste gesprekje.
               </p>
               <p>
-                Elk gesprekje duurt 6 minuten. Je praat waarover je wilt, je stelt de vragen die je wil stellen, no pressure here! 😉 De keuze is volledig aan jou! Indien je het gesprek een ‘twist’ wil geven of gewoon een leuke ijsbreker zoekt, daag je partner dan uit om een dilemma te beantwoorden uit de dilemma-enveloppe.
+                Elk gesprekje duurt <strong>6 minuten.</strong> Je praat waarover je wilt, je stelt de vragen die je wil stellen, no pressure here! 😉 De keuze is volledig aan jou! Indien je het gesprek een ‘twist’ wil geven of gewoon een leuke ijsbreker zoekt, daag je partner dan uit om een dilemma te beantwoorden uit de dilemma-enveloppe.
               </p>
               <p>
-                Na ongetwijfeld veel boeiende gesprekjes kan je nog gezellig iets blijven drinken en napraten.
+                Na ongetwijfeld veel boeiende gesprekjes kan je nog <strong>gezellig iets blijven drinken en napraten.</strong>
               </p>
               <p>
-                Achteraf kan je online aanduiden wie je graag nog eens terug zou willen zien. Is de interesse wederzijds dan worden de contactgegevens die jij wilt delen uitgewisseld.
+                Achteraf kan je online<strong> aanduiden wie je graag nog eens terug zou willen zien.</strong> Is de interesse wederzijds dan worden de contactgegevens die jij wilt delen uitgewisseld.
               </p>
           </div>
 					</div>
@@ -225,7 +225,7 @@ Bij aankomst verwelkomt onze sympathieke host je met een grote glimlach en geeft
 				<div class="card">
 					<div class="card-header" id="headingSeven">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven"><i class="fa fa-chevron-circle-down"></i> Na de speeddate</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven"> Na de speeddate<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
@@ -247,16 +247,16 @@ Bij aankomst verwelkomt onze sympathieke host je met een grote glimlach en geeft
 				<div class="card">
 					<div class="card-header" id="headingEight">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight"><i class="fa fa-chevron-circle-down"></i> Wie gaat speeddaten?</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight"> Wie gaat speeddaten?<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
 						<div class="card-body">
               <p>
-                Heel simpel: spontane, leuke mensen die, net als jij, nieuwe mensen willen leren kennen! Vooral drukbezette werkende mensen komen naar onze evenementen. Wij zijn er zeker van dat je aangenaam verrast zal zijn over wie je ontmoet ;)!
+                Heel simpel: spontane, leuke mensen die, net als jij, nieuwe mensen willen leren kennen! Vooral<strong> drukbezette werkende mensen </strong>komen naar onze evenementen. Wij zijn er zeker van dat je aangenaam verrast zal zijn over wie je ontmoet ;)!
             </p>
               <p>
-                Denk er aan, iedereen komt voor dezelfde reden: nieuwe mensen leren kennen en die speciale persoon ontmoeten. Wij bieden de perfecte relaxte, toffe en ongedwongen oplossing voor drukbezette (of iets minder drukbezette) mensen om een leuke avond door te brengen op een stijlvolle en gezellige locatie.
+                Denk er aan, iedereen komt voor dezelfde reden: nieuwe mensen leren kennen en die speciale persoon ontmoeten. Wij bieden de <strong>perfecte relaxte, toffe en ongedwongen oplossing </strong>voor drukbezette (of iets minder drukbezette) mensen om een leuke avond door te brengen op een stijlvolle en gezellige locatie.
               </p>
           </div>
 				</div>
@@ -264,13 +264,13 @@ Bij aankomst verwelkomt onze sympathieke host je met een grote glimlach en geeft
 				<div class="card">
 					<div class="card-header" id="headingNine">
 						<h2 class="mb-0">
-							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine"><i class="fa fa-chevron-circle-down"></i> Waar?</a>
+							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine"> Waar?<i class="fas fa-plus"></i></a>
 						</h2>
 					</div>
 					<div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordionExample">
 						<div class="card-body">
               <p>
-                Onze events gaan door in de meest  hippe en gezellige cafés en restaurants in het centrum van de stad.
+                Onze events gaan door in de meest <strong> hippe en gezellige cafés en restaurants </strong>in het centrum van de stad.
               </p>
               <p>
                 Omdat we ervan overtuigd zijn dat je contacten moet kunnen leggen in alle privacy, zijn onze cafés die avond steeds exclusief voorbehouden voor onze gasten.
@@ -282,9 +282,40 @@ Bij aankomst verwelkomt onze sympathieke host je met een grote glimlach en geeft
 		</div>
 	</div>
   </div>
-
 </section>
+<section id="succesvol">
+  <div class="container">
+    <h3>Hoe succesvol zijn speeddating events?</h3>
+    <div class="row">
+      <div class="col-12">
+        <div id="scroll-to" class="hearts-percentage"><span class="Count">82</span><span class="percentage">%</span>
+        </div>
+        <img id="flip" class="heart-img" src="./images/Tekengebied 1.png" alt="hearts">
+      </div>
+      <div class="col-12">
+        <p>
+          82 % van de mensen die naar <a class="linkFAQ" href="events.html">onze events</a> komen hebben minstens een “match”! Wij geloven dat een gezellige, hippe locatie gecombineerd met een speeddate hét recept is voor een geslaagde avond en wel hierom:
+              </p>
+              <div class="col-12">
+                <p>Speeddating is de perfecte ijsbreker. Nadat iedereen elkaar kort heeft leren kennen zit de sfeer altijd goed!</p>
+                <p>Iedereen die komt speeddaten staat er voor open om nieuwe mensen te leren kennen, dit creëert de ideale atmosfeer voor een topavond!</p>
+                <p>Geen gsm, geen app, geen gedoe. Je leert mensen kennen in het échte leven!</p>
+              </div>
 
+      </div>
+    </div>
+  </div>
+</section>
+<section id="community">
+  <div class="jumbotron container">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </p>
+  </div>
+</section>
 
 
 
