--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h2>Ontmoet interessante singles face to face</h2>
       <div class="button-box">
 
-      <a href="#about" class="btn-get-started scrollto Events">Bekijk Events</a>
+      <a href="#about" class="btn-get-started scrollto Events">Ontdek nu!</a>
     </div>
 
     </div>
@@ -72,21 +72,21 @@
   <div class="card" >
     <img src=".\images\heart in  heart.png" class="card-img-top icons" alt="hearts">
     <div class="card-body">
-      <h5 class="card-title">82% MATCH RATE</h5>
+      <h5 class="card-title">82% Match rate</h5>
       <p class="card-paragraph">Meer dan 82% van onze deelnemers heeft een match na de speeddating!</p>
     </div>
   </div>
   <div class="card">
     <img src=".\images\champagne.png" class="card-img-top icons" alt="champagne">
     <div class="card-body">
-      <h5 class="card-title">BUCKETLIST-MATERIAAL</h5>
+      <h5 class="card-title">Bucketlist-material</h5>
       <p class="card-paragraph">Speeddaten is populair en hip. Get out of your comfortzone!</p>
     </div>
   </div>
   <div class="card">
     <img src=".\images\heart lock.png" class="card-img-top icons" alt="lock">
     <div class="card-body">
-      <h5 class="card-title">VEILIG EN ANONIEM</h5>
+      <h5 class="card-title">Veilig en anoniem</h5>
       <p class="card-paragraph">Dare to Date draagt veiligheid en anonimiteit hoog in het vaandel.</p>
     </div>
   </div>
@@ -97,8 +97,8 @@
   <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4 event-title">Onze evenementen</h1>
-    <p class="lead">Bekijk hier het overzicht van onze geplande evenementen & filter eenvoudig op locatie of leeftijd!</p>
-    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-left Arrow" alt="Arrow">
+    <p class="lead">Bekijk hier het overzicht van onze geplande evenementen & filter eenvoudig op locatie of leeftijd! </p>
+    <img src="images\semicircular-up-arrow-60x80kopie.png" class="rounded float-right Arrow" alt="Arrow">
   </div>
 </div>
 
@@ -423,8 +423,8 @@
 <!-- begin testimonials Section -->
 <section id="testimonials">
   <div class="center container">
-    <h2>THAT'S ALL PRETTY GOOD, BUT WHAT DO THE PEOPLE SAY?</h2>
-    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-right Arrow" alt="Arrow">
+    <h2>That's all pretty good, but what do the people say?</h2>
+    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-left Arrow2" alt="Arrow">
   </div>
   <div id="carouselExampleIndicators" class=" container carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -620,14 +620,15 @@
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
 </div>
+
 <!-- end testimonials Section -->
 <!-- begin newsletter Section -->
 
@@ -648,10 +649,10 @@
      <form class="form">
         <input type="name" placeholder="Volledige naam">
         <input type="email" placeholder="Email adres">
-        <div class="inputs">
 
-        <input type="number" placeholder="Postcode">
-        <input type="number" placeholder="leeftijd">
+      <div class="inputs">
+        <input class="info-input" type="number" placeholder="Postcode">
+        <input class="info-input" type="number" placeholder="leeftijd">
       </div>
 
 
@@ -708,42 +709,6 @@ Ik ga akkoord met de voorwaarden</label>
 
 </footer>
 
-
-
-      <!-- ======= About Section ======= -->
-      <!--<section id="about" class="about">
-        <div class="container">
-
-          <div class="section-title">
-            <h2>About</h2>
-            <h3>Learn More <span>About Us</span></h3>
-            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-          </div>
-
-          <div class="row content">
-            <div class="col-lg-6">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-              <ul>
-                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              </ul>
-            </div>
-            <div class="col-lg-6 pt-4 pt-lg-0">
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.
-              </p>
-              <a href="#" class="btn-learn-more">Learn More</a>
-            </div>
-          </div>
-
-        </div>
-      </section>--><!-- End About Section -->
 
 
 
