--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- ======= event Section ======= -->
   <section>
   <div class="jumbotron jumbotron-fluid">
-  <div class="container">
+  <div class="container margin-events">
     <h1 class="display-4 event-title">Onze evenementen</h1>
     <p class="lead">Bekijk hier het overzicht van onze geplande evenementen & filter eenvoudig op locatie of leeftijd! </p>
     <img src="images\semicircular-up-arrow-60x80kopie.png" class="rounded float-right Arrow" alt="Arrow">
