--- a/index.html
+++ b/index.html
@@ -673,10 +673,10 @@ Ik ga akkoord met de voorwaarden</label>
 
   <div class=" col-12 col-md-6 gift" >
   <div class="row no-gutters background-gift">
-    <div class="col-12 col-md-4 card-img">
+    <div class="col-12 col-md-5 card-img">
     </div>
-    <div class="col-md-8">
-      <div class="card-body">
+    <div class="col-md-7">
+      <div class="card-body padding-giftcard">
         <h5 class="card-title gift-title">Cadeaubon!</h5>
         <p class="card-text">Nog op zoek naar een creatief en vooral leuk cadeau dat je aan je favoriete single vrienden kan geven?</p>
         <p class="card-text">Dare to Date cadeaubonnen!</p>
