--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul>
             <li><a href="waaromSpeeddate.html">WAAROM SPEEDDATE?</a></li>
             <li><a href="#">OVER ONS</a></li>
-            <li><a href="#">VEELGESTELDE VRAGEN</a></li>
+            <li><a href="FAQ.html">VEELGESTELDE VRAGEN</a></li>
             <li><a href="#">CAREERS</a></li>
             <li><a href="#">PARTNER WITH US</a></li>
           </ul>
