--- a/waaromSpeeddate.html
+++ b/waaromSpeeddate.html
@@ -29,7 +29,7 @@
 
 <body>
   <!-- ======= Header ======= -->
-<header id="header" class="fixed-top header-pages">
+<header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
     <a href="index.html" class="logo mr-auto"><img src=".\images\Artboard 1 kopie 8.png" alt="logo" class="img-fluid"></a>
@@ -39,11 +39,11 @@
         <li class="active">
           <a href="index.html">HOME</a>
         </li>
-        <li class="nav-link drop-down"><a data-toggle="dropdown">INFO</a>
+        <li class="nav-link drop-down" ><a data-toggle="dropdown">INFO</a>
           <ul>
             <li><a href="waaromSpeeddate.html">WAAROM SPEEDDATE?</a></li>
             <li><a href="#">OVER ONS</a></li>
-            <li><a href="#">VEELGESTELDE VRAGEN</a></li>
+            <li><a href="FAQ.html">VEELGESTELDE VRAGEN</a></li>
             <li><a href="#">CAREERS</a></li>
             <li><a href="#">PARTNER WITH US</a></li>
           </ul>
@@ -78,8 +78,8 @@
 <div class="row">
 		<div class="col-lg-12">
 			<div class="accordion" id="accordionExample">
-				<div class="card">
-					<div class="card-header" id="headingOne">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingOne">
 						<h2 class="clearfix mb-0">
 							<a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> leuk<i class="fas fa-plus"></i></a>
 						</h2>
@@ -97,8 +97,8 @@
           </div>
 					</div>
 				</div>
-				<div class="card">
-					<div class="card-header" id="headingTwo">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingTwo">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Snel<i class="fas fa-plus"></i></a>
 						</h2>
@@ -114,8 +114,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="card">
-					<div class="card-header" id="headingThree">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingThree">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Makkelijk<i class="fas fa-plus"></i></a>
 						</h2>
@@ -132,8 +132,8 @@
           </div>
 				</div>
           </div>
-				<div class="card">
-					<div class="card-header" id="headingFour">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingFour">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"> Veilig<i class="fas fa-plus"></i></a>
 						</h2>
@@ -156,8 +156,8 @@
             </div>
 					</div>
 				</div>
-        	<div class="card">
-					<div class="card-header" id="headingFive">
+        	<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingFive">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive"> Grappig<i class="fas fa-plus"></i></a>
 						</h2>
@@ -197,8 +197,8 @@ Het antwoord zal je ongetwijfeld veel leren over de persoon in kwestie en bovend
 <div class="row">
 		<div class="col-lg-12">
 			<div class="accordion" id="accordionExample">
-				<div class="card">
-					<div class="card-header" id="headingSix">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingSix">
 						<h2 class="clearfix mb-0">
 							<a class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix"> De avond zelf<i class="fas fa-plus"></i></a>
 						</h2>
@@ -222,8 +222,8 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
           </div>
 					</div>
 				</div>
-				<div class="card">
-					<div class="card-header" id="headingSeven">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingSeven">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven"> Na de speeddate<i class="fas fa-plus"></i></a>
 						</h2>
@@ -244,8 +244,8 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
 						</div>
 					</div>
 				</div>
-				<div class="card">
-					<div class="card-header" id="headingEight">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingEight">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight"> Wie gaat speeddaten?<i class="fas fa-plus"></i></a>
 						</h2>
@@ -261,8 +261,8 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
           </div>
 				</div>
           </div>
-				<div class="card">
-					<div class="card-header" id="headingNine">
+				<div class="card waaromSpeeddateStyling-card">
+					<div class="card-header waaromSpeeddateStyling" id="headingNine">
 						<h2 class="mb-0">
 							<a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine"> Waar?<i class="fas fa-plus"></i></a>
 						</h2>
@@ -287,14 +287,14 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
   <div class="container">
     <h3>Hoe succesvol zijn speeddating events?</h3>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 col-md-4">
         <div id="scroll-to" class="hearts-percentage"><span class="Count">82</span><span class="percentage">%</span>
         </div>
         <img id="flip" class="heart-img" src="./images/Tekengebied 1.png" alt="hearts">
       </div>
-      <div class="col-12">
+      <div class="col-12 col-md-8">
         <p>
-          82 % van de mensen die naar <a class="linkFAQ" href="events.html">onze events</a> komen hebben minstens een “match”! Wij geloven dat een gezellige, hippe locatie gecombineerd met een speeddate hét recept is voor een geslaagde avond en wel hierom:
+          82 % van de mensen die naar <a class="linkEvents" href="events.html">onze events</a> komen hebben minstens een “match”! Wij geloven dat een gezellige, hippe locatie gecombineerd met een speeddate hét recept is voor een geslaagde avond en wel hierom:
               </p>
               <div class="col-12">
                 <p>Speeddating is de perfecte ijsbreker. Nadat iedereen elkaar kort heeft leren kennen zit de sfeer altijd goed!</p>
@@ -307,12 +307,11 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
   </div>
 </section>
 <section id="community">
-  <div class="jumbotron container">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <div class="jumbotron container community">
+    <h1 class="display-4">Join the community !</h1>
+    <p class="lead">Maak deel uit van de vele singles die flirten en liefde vinden op onze evenementen.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary btn-lg btn-styling-community" href="#" role="button">SCHRIJF ME NU IN</a>
     </p>
   </div>
 </section>
