--- a/events.html
+++ b/events.html
@@ -30,7 +30,7 @@
 
 <body>
   <!-- ======= Header ======= -->
-<header id="header" class="fixed-top header-pages">
+<header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
     <a href="index.html" class="logo mr-auto"><img src=".\images\Artboard 1 kopie 8.png" alt="logo" class="img-fluid"></a>
@@ -40,11 +40,11 @@
         <li class="active">
           <a href="index.html">HOME</a>
         </li>
-        <li class="nav-link drop-down" ><a data-toggle="dropdown">INFO</a>
+        <li class="nav-link drop-down" ><a data-toggle="dropdown" >INFO</a>
           <ul>
             <li><a href="waaromSpeeddate.html">WAAROM SPEEDDATE?</a></li>
             <li><a href="#">OVER ONS</a></li>
-            <li><a href="#">VEELGESTELDE VRAGEN</a></li>
+            <li><a href="FAQ.html">VEELGESTELDE VRAGEN</a></li>
             <li><a href="#">CAREERS</a></li>
             <li><a href="#">PARTNER WITH US</a></li>
           </ul>
