--- a/FAQ.html
+++ b/FAQ.html
@@ -312,7 +312,7 @@ Na je inschrijving en betaling ontvang je een bevestigingsmail. Hierin staan all
 </section>
 <section id="extra-events">
   <div class="container">
-  <div class="title h1 text-center">meer leuke events</div>
+  <div class="title h1 text-center">Terug naar onze evenementen</div>
   </div>
   <div id="results" class="cards-search">
     <div class="container center-results">
