--- a/waaromSpeeddate.html
+++ b/waaromSpeeddate.html
@@ -307,7 +307,7 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
   </div>
 </section>
 <section id="community">
-  <div class="jumbotron container community">
+  <div class=" shadow jumbotron container community">
     <h1 class="display-4">Join the community !</h1>
     <p class="lead">Maak deel uit van de vele singles die flirten en liefde vinden op onze evenementen.</p>
     <p class="lead">
