--- a/FAQ.html
+++ b/FAQ.html
@@ -67,8 +67,10 @@
   <div class="hero-container">
       <h1 class="image-text-header FAQ-header">Veelgestelde vragen</h1>
       </div>
-</section> <!--end header foto -->
+</section>
+<!--end header foto -->
 
+<!--begin FAQ section -->
 <section id="FAQ-section">
   <div class="container">
 <div class="row">
@@ -310,6 +312,8 @@ Na je inschrijving en betaling ontvang je een bevestigingsmail. Hierin staan all
 </div>
 </div>
 </section>
+<!-- end FAQ question -->
+<!--begin extra events section -->
 <section id="extra-events">
   <div class="container">
   <div class="title h1 text-center">Terug naar onze evenementen</div>
@@ -407,6 +411,7 @@ Na je inschrijving en betaling ontvang je een bevestigingsmail. Hierin staan all
 
 
 </section>
+<!--end extra events section>
 
 
 
