--- a/waaromSpeeddate.html
+++ b/waaromSpeeddate.html
@@ -70,13 +70,17 @@
       <h1 class="image-text-header">Waarom Speeddate?</h1>
       <h2>Speeddating gecombineerd met een hippe en gezellige locatie is hét recept voor een topavond. Schrijf je in en ervaar het zelf!</h2>
       </div>
-</section> <!--end header foto -->
-<section id="speeddate"><!--begin paragraphs -->
+</section>
+<!--end header foto -->
+<!--begin first paragraphs -->
+
+<section id="speeddate">
+
   <div class="container">
 
 <h3>Waarom speeddate?</h3>
 <div class="row">
-		<div class="col-lg-12">
+		<div class="col-lg-6">
 			<div class="accordion" id="accordionExample">
 				<div class="card waaromSpeeddateStyling-card">
 					<div class="card-header waaromSpeeddateStyling" id="headingOne">
@@ -186,16 +190,40 @@ Het antwoord zal je ongetwijfeld veel leren over de persoon in kwestie en bovend
 				</div>
 			</div>
 		</div>
+    <div class="col-lg-6 ">
+<div class="border-hearts">
+
+    <div class="col-12 col-md-12">
+      <div id="scroll-to" class="hearts-percentage"><span class="Count">82</span><span class="percentage">%</span>
+      </div>
+      <img id="flip" class="heart-img" src="./images/Tekengebied 1.png" alt="hearts">
+    </div>
+    <div class="col-12 col-md-12">
+      <h2 class="title-match">82% Match Rate</h2>
+      <p>
+        82 % van de mensen die naar <a class="linkEvents" href="events.html">onze events</a> komen hebben minstens een “match”! Wij geloven dat een gezellige, hippe locatie gecombineerd met een speeddate hét recept is voor een geslaagde avond en wel hierom:
+            </p>
+            <div class="col-12">
+              <p>Speeddating is de perfecte ijsbreker. Nadat iedereen elkaar kort heeft leren kennen zit de sfeer altijd goed!</p>
+              <p>Iedereen die komt speeddaten staat er voor open om nieuwe mensen te leren kennen, dit creëert de ideale atmosfeer voor een topavond!</p>
+              <p>Geen gsm, geen app, geen gedoe. Je leert mensen kennen in het échte leven!</p>
+            </div>
+          </div>
+        </div>
+
+    </div>
 	</div>
   </div>
 
   </section>
+  <!-- end first paragraphs-->
+  <!--begin expectations section-->
 <section id="expectations">
   <div class="container">
 
-<h3>Wat kan je verwachten als je naar een van onze speeddating events komt?</h3>
+<h3>Wat kan je verwachten als je naar een van <span>onze speeddating events komt?</span></h3>
 <div class="row">
-		<div class="col-lg-12">
+		<div class="col-lg-6">
 			<div class="accordion" id="accordionExample">
 				<div class="card waaromSpeeddateStyling-card">
 					<div class="card-header waaromSpeeddateStyling" id="headingSix">
@@ -283,29 +311,218 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
 	</div>
   </div>
 </section>
-<section id="succesvol">
-  <div class="container">
-    <h3>Hoe succesvol zijn speeddating events?</h3>
-    <div class="row">
-      <div class="col-12 col-md-4">
-        <div id="scroll-to" class="hearts-percentage"><span class="Count">82</span><span class="percentage">%</span>
-        </div>
-        <img id="flip" class="heart-img" src="./images/Tekengebied 1.png" alt="hearts">
+<!--end expectations section-->
+<!--begin testimonials section-->
+<section id="testimonials" class="waaromSpeeddateTestimonials">
+  <div class="center container">
+    <h2>That's all pretty good, but what do the people say?</h2>
+    <img src="images/semicircular-up-arrow-60x80.png" class="rounded float-left Arrow2" alt="Arrow">
+  </div>
+  <div id="carouselExampleIndicators" class=" container carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner height-testimonials">
+    <div class="carousel-item active">
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
       </div>
-      <div class="col-12 col-md-8">
-        <p>
-          82 % van de mensen die naar <a class="linkEvents" href="events.html">onze events</a> komen hebben minstens een “match”! Wij geloven dat een gezellige, hippe locatie gecombineerd met een speeddate hét recept is voor een geslaagde avond en wel hierom:
-              </p>
-              <div class="col-12">
-                <p>Speeddating is de perfecte ijsbreker. Nadat iedereen elkaar kort heeft leren kennen zit de sfeer altijd goed!</p>
-                <p>Iedereen die komt speeddaten staat er voor open om nieuwe mensen te leren kennen, dit creëert de ideale atmosfeer voor een topavond!</p>
-                <p>Geen gsm, geen app, geen gedoe. Je leert mensen kennen in het échte leven!</p>
-              </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+
+    </div>
+    <div class="carousel-item">
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div><div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div><div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
+
+      </div>
+      <div class="wrapper col-lg-3 col-md-6 col-12">
+
+
+      	<div class="profile ">
+      		<img src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w" class="thumbnail">
+
+      		<h3 class="name">Beverly Little 24</h3>
+      		<p class="title">Type event</p>
+      		<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aliquam aliquid porro!</p>
+      		<p class="quote">,,</p>
+
+      	</div>
+
 
       </div>
     </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
 </section>
+<!--end testimonials section-->
+<!--begin community section-->
 <section id="community">
   <div class=" shadow jumbotron container community">
     <h1 class="display-4">Join the community !</h1>
@@ -316,7 +533,7 @@ Bij aankomst verwelkomt onze <strong>sympathieke host</strong> je met een grote 
   </div>
 </section>
 
-
+<!--end community section-->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
